projet_gl/src/test/deca/context/valid/3_37/3_37_1_UnaryMinus_Int.deca
// Description:
//    Programme minimaliste faisant un calcul du moins unitaire: Int
//
// Resultats:
//    
//
// Historique:
//    cree le 24/12/2023

{
        int a = 3;
        -a;
}
